<resources>
    <string-array name="divisions">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Khulna</item>
        <item>Barishal</item>
        <item>Rajshahi</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <item>Mymensingh</item>
    </string-array>
    <string name="app_name">User App</string>
    <string name="user_details">User Details</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="division">Division</string>
    <string name="other">Other</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_new_user">Add New User</string>
    <string name="user_app">User App</string>
    <string name="no_users_added_yet">No users added yet</string>
</resources>